@@ -1,3 +1,10 @@
+Sun, 08 Jun 2008 20:08:58 +0200 <thp@perli.net>
+Patch from Jérôme Chabod to fix "minimize on start" bug (#123)
+
+	* src/gpodder/gui.py: Patch from Jérôme Chabod to fix "minimize on
+	start" bug by moving the minimizing code after the "show window" code
+	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=123)
+
 Sun, 08 Jun 2008 20:06:51 +0200 <thp@perli.net>
 Updated Portuguese translation by João Paulo Pinto Trindade
 
